--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -625,3 +625,14 @@ pre tt:after {
     font-size: 100%;
   }
 }
+.link-icon {
+  font-size: medium;
+  vertical-align: middle;
+}
+.link-icon:before {
+  content: " ";
+}
+.link-icon:after {
+  content: "🔗";
+}
+
